--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -24,35 +24,34 @@
             android:textColor="@color/white" />
 
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/balance_layout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:orientation="horizontal"
+        android:layout_centerInParent="true"
         android:gravity="center"
-        android:background="@drawable/top_rounded_blue"
-        android:layout_below="@id/titleLayout"
-        android:visibility="gone">
+        android:orientation="vertical"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/balance_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Balance"
+            android:layout_weight="1"
+            android:text="Your Available Balance is : \n"
+            android:textColor="@color/black"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:layout_weight="1"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/balance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Balance"
+            android:layout_weight="1"
+            android:text="UGX 0.0"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:layout_weight="1"/>
+            android:textStyle="bold" />
 
     </LinearLayout>
     <LinearLayout
@@ -61,7 +60,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:visibility="invisible">
 
 
         <EditText
@@ -106,7 +106,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp" >
+        android:padding="10dp"
+        android:layout_marginBottom="10dp">
 
         <Button
             android:id="@+id/dialog_button"
@@ -118,6 +119,7 @@
             android:textColor="@color/white"
             android:textAlignment="center"
             android:layout_gravity="center"
+            android:textStyle="bold"
             android:background="@drawable/rectangular_green_solid" />
 
     </LinearLayout>
