--- a/app/src/main/res/layout/fragment_wallet_loan_farming_details.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_farming_details.xml
@@ -82,11 +82,12 @@
             app:layout_constraintEnd_toStartOf="@id/layout_poultry"
             android:paddingBottom="10dp"
             android:paddingTop="10dp">
-            <RadioButton
+            <ImageButton
                 android:id="@+id/radio_btn_crops"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/radio_button_selected"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -115,11 +116,12 @@
             app:layout_constraintEnd_toStartOf="@id/layout_piggery"
             android:paddingBottom="10dp"
             android:paddingTop="10dp">
-            <RadioButton
+            <ImageButton
                 android:id="@+id/radio_btn_poultry"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/radio_button_not_selected"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -148,11 +150,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:paddingTop="10dp"
             android:paddingBottom="10dp">
-            <RadioButton
+            <ImageButton
                 android:id="@+id/radio_btn_piggery"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/radio_button_not_selected"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
