--- a/app/src/main/res/layout/fragment_identity_proof.xml
+++ b/app/src/main/res/layout/fragment_identity_proof.xml
@@ -34,7 +34,7 @@
         app:spb_checkStateCompleted="true"
         app:spb_currentStateDescriptionColor="@color/colorPrimary"
         app:spb_currentStateNumber="three"
-        app:spb_maxStateNumber="three"
+        app:spb_maxStateNumber="four"
         app:spb_animationDuration="500"
         app:spb_maxDescriptionLines="2"
         app:spb_stateDescriptionSize="18sp"
@@ -309,7 +309,7 @@
                         android:background="@color/transparent"
                         android:paddingStart="30dp"
                         android:paddingEnd="4dp"
-                        android:text="@string/submit"
+                        android:text="@string/next"
                         android:textColor="@color/white"
                         android:textSize="@dimen/button_text_size"
                         android:textStyle="bold"
